<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainUser">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="119dp"
        android:layout_height="117dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="132dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAsesorias"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="#7fa208"
        android:text="@string/asesorias"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <Button
        android:id="@+id/btHistoNutric"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="#7fa208"
        android:text="@string/historial_nutricional"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAsesorias" />

    <Button
        android:id="@+id/btDiet"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#7fa208"
        android:text="@string/dietas_recetas"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btHistoNutric" />

    <Button
        android:id="@+id/btPerfil"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="#7fa208"
        android:text="@string/perfil"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDiet" />

    <Button
        android:id="@+id/btInform"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="#7fa208"
        android:text="@string/informate_mas"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPerfil" />

    <Button
        android:id="@+id/btCitas"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#7fa208"
        android:text="@string/citas"
        android:textSize="14sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivU_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enter" />
</androidx.constraintlayout.widget.ConstraintLayout>