<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainNutritionist">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="119dp"
        android:layout_height="117dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="132dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btNHistoNutric"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#7fa208"
        android:text="@string/n_historial"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNAsesorias" />

    <Button
        android:id="@+id/btNDiet"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#7fa208"
        android:text="@string/n_dietas"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNHistoNutric" />

    <Button
        android:id="@+id/btNPerfil"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#7fa208"
        android:text="@string/n_perfil"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNDiet" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enter" />

    <Button
        android:id="@+id/btNAsesorias"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#7fa208"
        android:text="@string/n_asesorias"
        app:cornerRadius="25dp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="265dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
</androidx.constraintlayout.widget.ConstraintLayout>