<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNameSpetialist"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameSpetialist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_especialista" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSpeciality"
        android:layout_width="371dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiNameSpetialist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSpeciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/especialidad" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiStatus"
        android:layout_width="380dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiSpeciality">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textStar1"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiStatus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEnd1"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textStar1"
        app:layout_constraintTop_toBottomOf="@+id/tiStatus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textStar2"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStar1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEnd2"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textStar2"
        app:layout_constraintTop_toBottomOf="@+id/textStar1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textStar3"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStar2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEnd3"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textStar2"
        app:layout_constraintTop_toBottomOf="@+id/textEnd2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDay"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStar3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/daydate"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="515dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btNDate_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ninfo_save"
        android:translationZ="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btNDate_Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNDate_Delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ninfo_delete"
        android:translationZ="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>